# xdpd

./: .gitignore  CHANGES  configure.ac
src/xdpd/drivers/netfpga10g/src/hal-imp/openflow/openflow1x/: of1x_driver.cc
src/xdpd/drivers/netfpga10g/src/io/: packet_io.cc
src/xdpd/drivers/netfpga10g/src/netfpga/: flow_entry.c  flow_entry.h  netfpga.c  netfpga.h  stats.h
src/xdpd/drivers/netfpga10g/src/pipeline-imp/: platform_hooks_of1x.cc
src/xdpd/fwd-modules/gnu_linux/: configure.ac
src/xdpd/fwd-modules/gnu_linux/src/: bg_taskmanager.cc  config.cc  config.h
src/xdpd/fwd-modules/gnu_linux/src/afa-imp/: forwarding_module.cc
src/xdpd/fwd-modules/gnu_linux/src/afa-imp/openflow/openflow12/: of12_forwarding_module.cc
src/xdpd/fwd-modules/gnu_linux/src/io/: Makefile.am  bufferpool.h  datapacketx86.cc  datapacketx86.h  iface_utils.cc  iomanager.cc  iomanager.h  pktin_dispatcher.cc
src/xdpd/fwd-modules/gnu_linux/src/io/packet_classifiers/: Makefile.am  packet_operations.cc  packet_operations.h  packetclassifier.cc  packetclassifier.h  rofl_pktclassifier.cc  rofl_pktclassifier.h  static_pktclassifier.cc  static_pktclassifier.h
src/xdpd/fwd-modules/gnu_linux/src/io/packet_classifiers/c_pktclassifier/: Makefile.am  c_pktclassifier.c  c_pktclassifier.h  classifier_monohdr.c  classifier_monohdr.h  cpc_utils.h
src/xdpd/fwd-modules/gnu_linux/src/io/ports/: ioport.h
src/xdpd/fwd-modules/gnu_linux/src/io/ports/mmap/: ioport_mmap.cc  ioport_mmap.h  ioport_mmapv2.cc  ioport_mmapv2.h
src/xdpd/fwd-modules/gnu_linux/src/io/scheduler/: epoll_ioscheduler.cc  epoll_ioscheduler.h  polling_ioscheduler.cc  polling_ioscheduler.h
src/xdpd/fwd-modules/gnu_linux/src/pipeline-imp/: Makefile.am  packet.cc  platform_hooks_of12.cc
src/xdpd/fwd-modules/gnu_linux/src/processing/: processingmanager.cc  processingmanager.h
src/xdpd/fwd-modules/gnu_linux/test/unit/io/: Makefile.am  mockup_operations.cc  pipeline_packet_mockup.c  platform_hooks_of1x_mockup.cc  test_performance_classifier.cc  time_utils.h
src/xdpd/management/: switch_manager.cc  switch_manager.h
src/xdpd/management/plugins/config/: example_complex.cfg
src/xdpd/management/plugins/config/openflow/: lsi_scope.cc
src/xdpd/openflow/openflow10/: of10_endpoint.cc
src/xdpd/openflow/openflow12/: of12_endpoint.cc  of12_translation_utils.cc
(+2 files in other folders)
