MAINTAINERCLEANFILES = Makefile.in

#SUBDIRS = 

noinst_LTLIBRARIES = libfwd_module_gnu_linux_io_classifiers.la

libfwd_module_gnu_linux_io_classifiers_ladir = $(includedir)/fwd-modules/gnu_linux/io/packet_classifiers/

libfwd_module_gnu_linux_io_classifiers_la_HEADERS = packetclassifier.h

libfwd_module_gnu_linux_io_classifiers_la_SOURCES = \
	static_pktclassifier.cc \
	static_pktclassifier.cc \
	packetclassifier.cc\
	packetclassifier.h
